--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "formik": "^2.4.6",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.72.13",
     "react-native-asset": "^2.1.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
