--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,6 @@ dependencies {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf', 'EvilIcons.ttf','Entypo.ttf' ] // Name of the font files you want to copy
+    iconFontNames: [ 'MaterialIcons.ttf','MaterialCommunityIcons.ttf', 'EvilIcons.ttf','Entypo.ttf','AntDesign.ttf' ] // Name of the font files you want to copy
 ]
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
