--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-native": "0.72.13",
     "react-native-asset": "^2.1.1",
+    "react-native-reanimated": "^3.9.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.30.1",
     "react-native-vector-icons": "^10.0.3",
